adding divide y venceras

--- a/4_reinas_(backtracking).ipynb
+++ b/4_reinas_(backtracking).ipynb
@@ -10,10 +10,8 @@
     "# Celda 1: Función de seguridad\n",
     "def is_safe(positions, row, col):\n",
     "    \"\"\"\n",
-    "    Comprueba si una reina en (row, col) no es atacada\n",
-    "    por las reinas ya colocadas en 'positions'.\n",
-    "    - positions: lista de columnas donde ya hay reinas,\n",
-    "    el índice es la fila.\n",
+    "    Comprueba si una reina en (row, col) no es atacada por las reinas ya colocadas en 'positions'.\n",
+    "    - positions: lista de columnas donde ya hay reinas,el índice es la fila.\n",
     "    \"\"\"\n",
     "    for r, c in enumerate(positions):\n",
     "        # misma columna o misma diagonal\n",
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1d653f15-92ce-4148-8a05-95bb496892f2",
    "metadata": {},
    "outputs": [],
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "bcd9898c-90ec-4f6d-9a7e-9f059e19dce9",
    "metadata": {},
    "outputs": [
